--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="container">
                     <!-- Start first slide -->
                     <div class="da-slide">
-                        <h2 class="fittext2">Arduino Project.</h2>
+                        <h2 class="fittext2">Arduino Project</h2>
                         <h4>Toy Car Project: Making an auto car.</h4>
                         <p>Work with a group of excited students to design, build, program a toy car, and make the car autonomous. Build circuits to connect different sensors like an ultrasonic sensor and other modules to the Arduino board and control the car movement.</p>
                         <a href="#" class="da-link button">Read more</a>
@@ -84,7 +84,7 @@
                     <!-- Start second slide -->
                     <div class="da-slide">
                         <h2>HTML/Javascript Project</h2>
-                        <h4>CCS Website: Creatign a great Site</h4>
+                        <h4>CCS Website: Creating a great Site</h4>
                         <p>Collaborate with the Computer and Circuits Society Club team to create and improve the CCS club's website. Learn to use Jquery, PHP and JavaScript languages while engaging live with other students through Microsoft Teams and GitHub.</p>
                         <a href="#" class="da-link button">Read more</a>
                         <div class="da-img">
@@ -136,7 +136,7 @@ Our mission is to encourage participants for all levels to use technology and de
                             <div class="circle-border zoom-in">
                                 <img class="img-circle" src="images/chatbot.png" alt="service 1">
                             </div>
-                            <h3>Virtual-Friendly Enviorment</h3>
+                            <h3>Virtual-Friendly Enviornment</h3>
                             <p>We understand each member has their own responsibilities, which is why we offer virtual meetings to fit everyone's schedule.</p>
                         </div>
                     </div>
@@ -154,7 +154,7 @@ Our mission is to encourage participants for all levels to use technology and de
                             <div class="circle-border zoom-in">
                                 <img class="img-circle" src="images/partnership.png" alt="service 3">
                             </div>
-                            <h3>Diverse Culture</h3>
+                            <h3>Teamwork</h3>
                             <p>Collaborate with a group of diverse people who share the same passions and interests as you.</p>
                         </div>
                     </div>
