--- a/index.html
+++ b/index.html
@@ -992,31 +992,34 @@ planning	role	and	acts	for	the	board	of	directors	or	the	entire	club	between	mee
                         <p>Don't be shy, we don't bite.</p>
                     </div>
                 </div>
-                <div class="map-wrapper"> <!-- Display's the map (background img in css)-->
-                    <div class="container">
-                        <div class="row-fluid">
-                            <div class="span5 contact-form centered">
-                                <h3>Say Hello</h3>
-                                <div id="successSend" class="alert alert-success invisible">
-                                    <strong>Well done!</strong>Your message has been sent.</div>
-                                <div id="errorSend" class="alert alert-error invisible">There was an error.</div>
-                                <form id="contact-form" action="https://formspree.io/xqkkwrqn" method="POST">
-                                    <label>
-                                        <div class="controls">
-                                        <input type="text" name="_replyto" placeholder="* Your email...">
-                                        </div>
-                                    </label>
-                                    <label>
-                                        <div class="controls">
-                                        <textarea name="message" placeholder="* Comments..."></textarea>
-                                        </div>
-                                    </label>
-                                    <button type="submit" class="message-btn">Send</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </div>
+                  <div class="container" id="mapcontainer">
+                      <div class="row-fluid">
+                          <div class="span8 map-responsive"> <!-- Display's the map (background img in css)-->
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3593.1198291435953!2d-80.24039558502648!3d25.76660528363463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b704083508dd%3A0x343442a364e050!2sMiami%20Dade%20College%20-%20Eduardo%20J.%20Padron%20Campus!5e0!3m2!1sen!2sus!4v1574193540524!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                          </div>
+                          <div class="span4 contact-form centered ">
+                              <h3>Say Hello</h3>
+                              <div id="successSend" class="alert alert-success invisible">
+                                  <strong>Well done!</strong>Your message has been sent.</div>
+                              <div id="errorSend" class="alert alert-error invisible">There was an error.</div>
+                              <form id="contact-form" action="https://formspree.io/xqkkwrqn" method="POST">
+                                  <label>
+                                      <div class="controls">
+                                      <input type="text" name="_replyto" placeholder="* Your email...">
+                                      </div>
+                                  </label>
+                                  <label>
+                                      <div class="controls">
+                                      <textarea name="message" placeholder="* Comments..."></textarea>
+                                      </div>
+                                  </label>
+                                  <button type="submit" class="message-btn">Send</button>
+                              </form>
+                          </div>
+                      </div>
+                  </div>
+              </div>
                 <div class="container">
                     <div class="span9 center contact-info">
                         <p>627 SW 27th Ave, Miami, FL 33135</p>
