--- a/index.html
+++ b/index.html
@@ -731,159 +731,10 @@ The	critical	leadership	positions	are	the	President,	Vice	President,	Secretary,	
 various	event	and	committee	chairs	usually	comprise	the	Board	of	Directors,	which	establishes	policy	and	provides
 overall	direction	for	all	club	activities. The	executive	committee	often	performs	a	long-range
 planning	role	and	acts	for	the	board	of	directors	or	the	entire	club	between	meetings. </p>
-                </div>
-                <!--<h3>Skills</h3>
-                <div class="row-fluid">
-                    <div class="span6">
-                        <ul class="skills">
-                            <li>
-                                <span class="bar" data-width="80%"></span>
-                                <h3>Graphic Design</h3>
-                            </li>
-                            <li>
-                                <span class="bar" data-width="95%"></span>
-                                <h3>Html & Css</h3>
-                            </li>
-                            <li>
-                                <span class="bar" data-width="68%"></span>
-                                <h3>jQuery</h3>
-                            </li>
-                            <li>
-                                <span class="bar" data-width="70%"></span>
-                                <h3>Wordpress</h3>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="span6">
-                        <div class="highlighted-box center">
-                            <h1>We're Hiring</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, ullamcorper suscipit lobortis nisl ut aliquip consequat. I learned that we can do anything, but we can't do everything...</p>
-                            <button class="button button-sp">Join Us</button>
-                        </div>
-                    </div>
-                </div>-->
-            </div>
-        </div>
-        <!-- About us section end -->
-<!--
-        <div class="section secondary-section">
-            <div class="triangle"></div>
-            <div class="container centered">
-                <p class="large-text">Elegance is not the abundance of simplicity. It is the absence of complexity.</p>
-                <a href="#" class="button">Purshase now</a>
-            </div>
-        </div>
--->
-        <!-- Client section start -->
-        <!-- Client section start -->
-<!--
-        <div id="clients">
-            <div class="section primary-section">
-                <div class="triangle"></div>
-                <div class="container">
-                    <div class="title">
-                        <h1>What Client Say?</h1>
-                        <p>Duis mollis placerat quam, eget laoreet tellus tempor eu. Quisque dapibus in purus in dignissim.</p>
-                    </div>
-                    <div class="row">
-                        <div class="span4">
-                            <div class="testimonial">
-                                <p>"I've worked too hard and too long to let anything stand in the way of my goals. I will not let my teammates down and I will not let myself down."</p>
-                                <div class="whopic">
-                                    <div class="arrow"></div>
-                                    <img src="images/Client1.png" class="centered" alt="client 1">
-                                    <strong>John Doe
-                                        <small>Client</small>
-                                    </strong>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="span4">
-                            <div class="testimonial">
-                                <p>"In motivating people, you've got to engage their minds and their hearts. I motivate people, I hope, by example - and perhaps by excitement, by having productive ideas to make others feel involved."</p>
-                                <div class="whopic">
-                                    <div class="arrow"></div>
-                                    <img src="images/Client2.png" class="centered" alt="client 2">
-                                    <strong>John Doe
-                                        <small>Client</small>
-                                    </strong>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="span4">
-                            <div class="testimonial">
-                                <p>"Determine never to be idle. No person will have occasion to complain of the want of time who never loses any. It is wonderful how much may be done if we are always doing."</p>
-                                <div class="whopic">
-                                    <div class="arrow"></div>
-                                    <img src="images/Client3.png" class="centered" alt="client 3">
-                                    <strong>John Doe
-                                        <small>Client</small>
-                                    </strong>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="testimonial-text">
-                        "Perfection is Achieved Not When There Is Nothing More to Add, But When There Is Nothing Left to Take Away"
-                    </p>
-                </div>
-            </div>
-        </div>
--->
-<!--
-        <div class="section third-section">
-            <div class="container centered">
-                <div class="sub-section">
-                    <div class="title clearfix">
-                        <div class="pull-left">
-                            <h3>Our Clients</h3>
-                        </div>
-                        <ul class="client-nav pull-right">
-                            <li id="client-prev"></li>
-                            <li id="client-next"></li>
-                        </ul>
-                    </div>
-                    <ul class="row client-slider" id="clint-slider">
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo01.png" alt="client logo 1">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo02.png" alt="client logo 2">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo03.png" alt="client logo 3">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo04.png" alt="client logo 4">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo05.png" alt="client logo 5">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo02.png" alt="client logo 6">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="images/clients/ClientLogo04.png" alt="client logo 7">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
--->
+              </div>
+          </div>
+      </div>
+
         <!-- Price section start -->
         <div id="price" class="section secondary-section">
             <div class="container">
@@ -921,69 +772,10 @@ planning	role	and	acts	for	the	board	of	directors	or	the	entire	club	between	mee
                             <li><a href="" class="button button-ps">GitHub</a></li>
                         </ul>
                     </div>
-                    </div>
-<!--
-                <div class="container">
-                    <div class="span9 center contact-info">
-                        <div class="title">
-                            <h3>Member Quick Links</h3>
-                        </div>
-                    </div>
-                    <div class="row-fluid centered">
-                        <ul class="social">
-                            <li>
-                                <a href="https://teams.microsoft.com/l/team/19%3ac0a2987905b64822818f3018ab3d37c8%40thread.skype/conversations?groupId=7124fea7-d800-489b-8061-90d6714c08b3&tenantId=e048df73-e503-47f4-8ec1-d8bc54b773a5">
-                                    <span class="icon-facebook-circled"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/CCS-MDC">
-                                    <span class="icon-twitter-circled"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
--->
-<!--
-                <div class="centered">
-                    <p class="price-text">We Offer Custom Plans. Contact Us For More Info.</p>
-                    <a href="#contact" class="button">Contact Us</a>
-                </div>
--->
+                  </div>
             </div>
         </div>
-        <!-- Price section end -->
-        <!-- Newsletter section start -->
-<!--
-        <div class="section third-section">
-            <div class="container newsletter">
-                <div class="sub-section">
-                    <div class="title clearfix">
-                        <div class="pull-left">
-                            <h3>Newsletter</h3>
-                        </div>
-                    </div>
-                </div>
-                <div id="success-subscribe" class="alert alert-success invisible">
-                    <strong>Well done!</strong>You successfully subscribet to our newsletter.</div>
-                <div class="row-fluid">
-                    <div class="span5">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                    </div>
-                    <div class="span7">
-                        <form class="inline-form">
-                            <input type="email" name="email" id="nlmail" class="span8" placeholder="Enter your email" required />
-                            <button id="subscribe" class="button button-sp">Subscribe</button>
-                        </form>
-                        <div id="err-subscribe" class="error centered">Please provide valid email address.</div>
-                    </div>
-                </div>
-            </div>
-        </div>
--->
-        <!-- Newsletter section end -->
-        <!-- Contact section start -->
+
         <div id="contact" class="contact">
             <div class="section secondary-section">
                 <div class="container">
@@ -1019,54 +811,56 @@ planning	role	and	acts	for	the	board	of	directors	or	the	entire	club	between	mee
                           </div>
                       </div>
                   </div>
-              </div>
-                <div class="container">
-                    <div class="span9 center contact-info">
-                        <p>627 SW 27th Ave, Miami, FL 33135</p>
-                        <p class="info-mail">ccs.mdc@gmail.com</p>
+          </div>
+
+          <div class="icons">
+            <div class="container">
+                <div class="span9 center contact-info">
+                    <p>627 SW 27th Ave, Miami, FL 33135</p>
+                    <p class="info-mail">ccs.mdc@gmail.com</p>
 <!--                        <p>+11 286 543 850</p>-->
 <!--                        <p>+11 234 567 890</p>-->
-                        <div class="title">
-                            <h3>We Are Social</h3>
-                        </div>
+                    <div class="title">
+                        <h3>We Are Social</h3>
                     </div>
-                    <div class="row-fluid centered">
-                        <ul class="social">
-                            <li>
-                                <a href="">
-                                    <span class="icon-facebook-circled"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <span class="icon-twitter-circled"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <span class="icon-linkedin-circled"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <span class="icon-pinterest-circled"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <span class="icon-dribbble-circled"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <span class="icon-gplus-circled"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="row-fluid centered">
+                    <ul class="social">
+                        <li>
+                            <a href="">
+                                <span class="icon-facebook-circled"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="icon-twitter-circled"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="icon-linkedin-circled"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="icon-pinterest-circled"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="icon-dribbble-circled"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span class="icon-gplus-circled"></span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
+
         <!-- Contact section edn -->
         <!-- Footer section start -->
         <div class="footer">
